1. Added fontawesome icons script. 2. upload product, edit product and viewing orders

--- a/public/src/index.html
+++ b/public/src/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>Avanthika Collections</title>
   <base href="/">
-
+  <script src="https://use.fontawesome.com/730c3a6582.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="avanthika.png">
 </head>
